Fixes spacing issue on portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ body {
 .info {
   text-align: left;
   font-size: 20px;
+  padding-bottom: 20px !important;
 }
 
 .contact {
